# ekiden

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  Xargo.toml
.circleci/: config.yml
abci/: Cargo.toml
abci/src/: application.rs  lib.rs  server.rs
client/: .gitignore  Cargo.toml  build.rs  ekiden_web3.proto
client/src/: lib.rs  main.rs
clients/benchmark-dp-credit-scoring-infer/: Cargo.toml
clients/benchmark-dp-credit-scoring-train/: Cargo.toml
clients/benchmark-dp-credit-scoring-train/src/: main.rs
clients/benchmark-iot-learner-infer/: Cargo.toml
clients/benchmark-iot-learner-train/: Cargo.toml
clients/benchmark-learner-infer/: Cargo.toml
clients/benchmark-learner-infer/src/: main.rs
clients/benchmark-learner-train/: Cargo.toml
clients/benchmark-learner-train/src/: main.rs
clients/benchmark-token-failover/: Cargo.toml
clients/benchmark-token-get-balance/: Cargo.toml
clients/benchmark-token-transfer/: Cargo.toml
clients/benchmark-token-transfer-multi/: Cargo.toml
clients/benchmark-token-transfer/src/: main.rs
clients/credit_scoring_learner/: Cargo.toml  requirements.txt
clients/credit_scoring_learner/src/: evaluate.py  main.rs  prep_data.py
clients/dp_credit_scoring/: Cargo.toml
clients/ethtoken/: Cargo.toml
clients/ethtoken/src/: main.rs
clients/iot_learner/: Cargo.toml  README.md
clients/iot_learner/src/: gen_data.py  main.rs
clients/learner/: Cargo.toml  requirements.txt
clients/learner/src/: main.rs  prep_data.py
clients/token/: Cargo.toml
clients/token/src/: main.rs
clients/utils/: Cargo.toml
common/: Cargo.toml
common/src/: error.rs  hex_encoded.rs  lib.rs  profiling.rs  random.rs  serializer.rs
compute/: Cargo.toml  build.rs
compute-client/: Cargo.toml  build.rs
compute-client/src/: backend.rs  client.rs  errors.rs  future.rs  hex_encoded.rs  ias.rs  lib.rs  macros.rs  quote.rs  secure_channel.rs
compute-client/src/backend/: base.rs  mod.rs  web3.rs
compute/api/: Cargo.toml
compute/src/: compute_web3.proto  enclave.rs  errors.rs  handlers.rs  ias.rs  instrumentation.rs  main.rs  server.rs
consensus/: Cargo.toml  build.rs
consensus/api/: Cargo.toml
consensus/benches/: benchmarks.rs
consensus/src/: consensus.proto  ekidenmint.rs  errors.rs  lib.rs  main.rs  rpc.rs  state.rs  tendermint.rs
consensus/tests/: integration_test.rs
contracts/: Cargo.toml  Makefile.toml
contracts/credit_scoring_learner/: Cargo.toml
contracts/credit_scoring_learner/api/: Cargo.toml  build.rs
contracts/credit_scoring_learner/api/src/: api.proto  api.rs  lib.rs
contracts/credit_scoring_learner/src/: lib.rs
contracts/dp_credit_scoring/: Cargo.toml
contracts/dummy/: Cargo.toml  build.rs
contracts/dummy/api/: Cargo.toml  build.rs
contracts/dummy/api/src/: api.rs
contracts/dummy/src/: lib.rs
contracts/ethtoken/: Cargo.toml
contracts/ethtoken/api/: Cargo.toml
contracts/ethtoken/api/src/: api.rs
contracts/ethtoken/resources/: erc20.contract
contracts/ethtoken/src/: lib.rs
contracts/iot_learner/: Cargo.toml
contracts/iot_learner/src/: lib.rs
contracts/key-manager/: Cargo.toml  Makefile.toml
contracts/key-manager/api/: Cargo.toml  build.rs
contracts/key-manager/api/src/: api.proto  api.rs  lib.rs
contracts/key-manager/client/: Cargo.toml  build.rs
contracts/key-manager/client/src/: client.rs  lib.rs
contracts/key-manager/src/: key_store.rs  lib.rs
contracts/learner/: Cargo.toml  Makefile.toml
contracts/learner/api/: Cargo.toml
contracts/learner/api/src/: api.proto  api.rs  lib.rs
contracts/learner/src/: contract.rs  learner_contract.rs  lib.rs  macros.rs  utils.rs
contracts/src/: contract_error.rs  lib.rs  token.rs
contracts/token/: Cargo.toml  build.rs
contracts/token-app/: Cargo.toml
contracts/token-enclave/: build.rs
contracts/token/api/: Cargo.toml
contracts/token/api/src/: api.proto  api.rs
contracts/token/src/: lib.rs  main.rs  token.proto  token_contract.rs  token_state.proto  token_state.rs
contracts/token_app/: Cargo.toml
contracts/token_enclave/: Cargo.toml  build.rs
contracts/token_enclave/src/: lib.rs  token_contract.rs
contracts/token_trusted/: Cargo.toml
contracts/token_untrusted/: Cargo.toml  build.rs  make.old
contracts/token_untrusted/src/: main.rs
core/common/: Cargo.toml
core/common/src/: contract.rs  lib.rs
core/edl/: Cargo.toml
core/edl/src/: core.edl  lib.rs
core/trusted/: Cargo.toml
core/untrusted/: Cargo.toml
db/edl/: Cargo.toml
db/trusted/: Cargo.toml  build.rs
db/untrusted/: Cargo.toml
docker/deployment/: Dockerfile.build  Dockerfile.runtime
docker/development/: Dockerfile
docker/testing/: Dockerfile
docs/: database.md  enclave-backtrace.md  enclave-identity.md  hw-benchmarking.md  profiling.md  rpc-drawio.xml  rpc.md  secure-channel.md
enclave/common/: Cargo.toml
enclave/trusted/: Cargo.toml
enclave/untrusted/: Cargo.toml
enclaves/dummy/: Cargo.toml  build.rs
examples/enclave_test/: Cargo.toml  build.rs
guess/: .gitignore  Cargo.toml  Makefile
guess/app/: .gitignore  Cargo.toml  build.rs
guess/enclave/: Cargo.toml  Enclave.edl  build.rs
libcontract/: Cargo.toml  build.rs
libcontract/app/: Cargo.toml
libcontract/common/: Cargo.toml  address.rs  build.rs  contract.rs  contract_error.rs  enclave_rpc.proto  lib_enclave.rs  mod.rs  (+1 more)
libcontract_common/: Enclave.edl  address.rs  contract_error.rs  lib_trusted.rs  lib_untrusted.rs
libcontract_trusted/: Cargo.toml  build.rs
libcontract_untrusted/: Cargo.toml  src
scripts/: benchmark.py  build-enclave.sh  compute-enter.sh  do_the_thing.sh  local-benchmark.sh  make-release.py  run_contract.sh  rust-sgx-enter.sh  sgx-attach.sh  sgx-enter-hw.sh  sgx-enter.sh  storage-enter.sh  tendermint-clear.sh  tendermint-start.sh  tendermint_clear.sh  tendermint_start.sh
storage/: Cargo.toml  build.rs
storage/src/: ekidenmint.rs  errors.rs  main.rs  rpc.rs  server.rs  state.rs  storage.proto  tendermint.rs
tools/: Cargo.toml
tools/config/: ekiden.edl
tools/src/: lib.rs
xargo/: Xargo.toml.template
(+204 files in other folders)
