[workspace]
members = [
    "tools",

    # Key manager is special and must be built before ekiden-rpc-trusted in
    # order for ekiden-rpc-trusted to include its MRENCLAVE.
    "contracts/key-manager",

    "contracts/token",

    # Enclave loader.
    "enclave/common",
    "enclave/untrusted",

    # RPC (+ attestation).
    "rpc/common",
    "rpc/client",
    "rpc/untrusted",
    "rpc/trusted",

    # Database.
    "db/untrusted",
    "db/trusted",

    # Core.
    "core/common",
    "core/untrusted",
    "core/trusted",

    # Compute node.
    "compute",

    # Consensus node.
    "consensus",

    # Clients.
    "clients/token",
]
