[package]
name = "ekiden-web3"
version = "0.1.0"
authors = ["Fan Zhang <fanz@linux.com>"]

[lib]
test = false
doctest = false

[dependencies]
grpc            = "0.*"
protobuf        = "1.*"
futures         = "0.*"
futures-cpupool = "0.1.*"
tls-api         = "0.*"
httpbis         = "0.4.1"

[build-dependencies]
protoc-rust-grpc= "0.*"

[[bin]]
name = "ekiden_client"
test = false

[[bin]]
name = "ekiden_server"
test = false
