[package]
name = "client"
version = "0.1.0"
authors = ["Jernej Kos <jernej@kos.mx>"]
build = "build.rs"

[dependencies]
grpc = "0.*"
protobuf = "1.*"
futures = "0.*"
futures-cpupool = "0.1.*"
tls-api  = "0.*"
httpbis  = "0.4.1"

[build-dependencies]
libcontract-utils = { path = "../libcontract/utils" }
protoc-rust-grpc = "0.*"
