[package]
name = "ekiden-common"
version = "0.1.0"
authors = [
    "Raymond Cheng <me@raymondcheng.net>",
    "Jernej Kos <jernej@kos.mx>"
]

[dependencies]
protobuf = "1.4.3"

[target.'cfg(target_env = "sgx")'.dependencies]
sgx_types = { git = "https://github.com/ekiden/rust-sgx-sdk", branch = "xargo" }
sgx_trts = { git = "https://github.com/ekiden/rust-sgx-sdk", branch = "xargo" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
rand = "0.4.2"
