[package]
name = "ekiden-common"
version = "0.1.0"
authors = [
    "Raymond Cheng <me@raymondcheng.net>",
    "Jernej Kos <jernej@kos.mx>"
]

[features]
default = []
profiling = []

[dependencies]
protobuf = "1.4.3"
byteorder = "1"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
rand = "0.4.2"
