[package]
name = "compute-client"
version = "0.1.0"
authors = ["Jernej Kos <jernej@kos.mx>"]
build = "build.rs"

[dependencies]
grpc = "0.*"
protobuf = "1.*"
futures = "0.*"
futures-cpupool = "0.1.*"
tls-api  = "0.*"
httpbis  = "0.4.1"
byteorder = "1.2.1"
rand = "0.4"
sodalite = "0.3.0"
reqwest = "0.8.2"
base64 = "0.9.0"
libcontract-common = { path = "../libcontract/common" }

[build-dependencies]
libcontract-utils = { path = "../libcontract/utils" }
protoc-rust-grpc = "0.*"
