[package]
name = "compute-client"
version = "0.1.0"
authors = ["Jernej Kos <jernej@kos.mx>"]
build = "build.rs"

[features]
default = ["no-sgx"]
no-sgx = ["protobuf", "byteorder", "rand", "grpc", "tls-api", "httpbis", "byteorder/std", "libcontract-common/no-sgx"]
sgx = ["protobuf-sgx", "byteorder-sgx", "sgx_types", "sgx_tstd", "sgx_trts", "libcontract-common/sgx"]

[dependencies]
grpc = { version = "0.2.1", optional = true }
tls-api  = { version = "0.1.12", optional = true }
httpbis  = { version = "0.4.1", optional = true }
rand = { version = "0.4", optional = true }
protobuf = { version = "1.4.2", optional = true }
byteorder = { version = "1.2.1", optional = true }
protobuf-sgx = { path = "../third_party/protobuf", optional = true }
byteorder-sgx = { path = "../third_party/byteorder", optional = true }
sgx_types = { path = "/sgx/sgx_types", optional = true }
sgx_tstd = { path = "/sgx/sgx_tstd", optional = true }
sgx_trts = { path = "/sgx/sgx_trts", optional = true }
sodalite = "0.3.0"
libcontract-common = { path = "../libcontract/common", default-features = false }

[build-dependencies]
libcontract-utils = { path = "../libcontract/utils" }
protoc-rust-grpc = "0.2.1"
