[package]
name = "compute-client"
version = "0.1.0"
authors = ["Jernej Kos <jernej@kos.mx>"]
build = "build.rs"

[features]
default = ["no-sgx"]
no-sgx = ["protobuf", "rand", "grpc", "tls-api", "httpbis", "futures", "tokio-core", "libcontract-common/no-sgx"]
sgx = ["protobuf-sgx", "sgx_types", "sgx_tstd", "sgx_trts", "futures-sgx", "libcontract-common/sgx"]

[dependencies]
grpc = { version = "0.2.1", optional = true }
tls-api  = { version = "0.1.12", optional = true }
httpbis  = { version = "0.4.1", optional = true }
rand = { version = "0.4", optional = true }
protobuf = { version = "1.4.2", optional = true }
byteorder = { version = "1.2.1", optional = true }
protobuf-sgx = { git = "https://github.com/ekiden/rust-protobuf", optional = true }
byteorder-sgx = { git = "https://github.com/ekiden/byteorder", optional = true }
sgx_types = { git = "https://github.com/ekiden/rust-sgx-sdk", optional = true }
sgx_tstd = { git = "https://github.com/ekiden/rust-sgx-sdk", optional = true }
sgx_trts = { git = "https://github.com/ekiden/rust-sgx-sdk", optional = true }
sodalite = "0.3.0"
libcontract-common = { path = "../libcontract/common", default-features = false }
futures = { version = "0.1", optional = true }
futures-sgx = { git = "https://github.com/ekiden/futures-rs", optional = true }
tokio-core = { version = "0.1", optional = true }

[build-dependencies]
libcontract-utils = { path = "../libcontract/utils" }
protoc-rust-grpc = "0.2.1"
