[package]
name = "compute"
version = "0.1.0"
authors = [
    "Raymond Cheng <me@raymondcheng.net>",
    "Jernej Kos <jernej@kos.mx>"
]
build = "build.rs"

[features]
no_cache = []
no_diffs = []

[dependencies]
libcontract-common = { path = "../libcontract/common" }
libcontract-untrusted = { path = "../libcontract/untrusted" }
compute-client = { path = "../compute-client" }
protobuf = "1.4.2"
grpc = "0.2.1"
futures = "0.1"
futures-cpupool = "0.1.*"
tls-api = "0.1.12"
httpbis = "0.4.1"
thread_local = "0.3.5"
clap = "2.29.1"
reqwest = "0.8.2"
base64 = "0.9.0"
prometheus = "0.3.10"
hyper = "0.11"
time = "0.1"
tokio-core = "0.1"

[build-dependencies]
ekiden-tools = { path = "../tools" }
protoc-rust = "1.4"
protoc-rust-grpc = "0.2.1"
