[package]
name = "consensus"
version = "0.1.0"
authors = ["Raymond Cheng <me@raymondcheng.net>"]
build = "build.rs"

[dependencies]
abci = { path = "../abci" }
futures = "0.1"
grpc = "0.2.1"
hex = "0.3.1"
hyper = "0.11"
protobuf = "1.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tls-api = "0.1.12"
tokio-core = "0.1"
tokio-proto = "0.1"

[build-dependencies]
libcontract-utils = { path = "../libcontract/utils" }
protoc-rust = "1.4"
protoc-rust-grpc = "0.2.1"
