[package]
name = "consensus"
version = "0.1.0"
authors = ["Ekiden Developers <ekiden-dev@googlegroups.com>"]
build = "build.rs"

[dependencies]
abci = { path = "../abci" }
clap = "2.29.1"
futures = "0.1"
grpc = "0.2.1"
hex = "0.3.1"
hyper = "0.11"
protobuf = "1.4.2"
rand = "0.4.2"
tls-api = "0.1.12"
tokio-core = "0.1"
tokio-proto = "0.1"

[build-dependencies]
libcontract-utils = { path = "../libcontract/utils" }
protoc-rust = "1.4"
protoc-rust-grpc = "0.2.1"

[lib]
name = "consensus"
path = "src/lib.rs"

[[bin]]
name = "consensus"
path = "src/main.rs"
