[package]
name = "libcontract_trusted"
version = "0.1.0"
authors = ["Raymond Cheng <me@raymondcheng.net>"]

[lib]
path = "src/lib_trusted.rs"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_types = { path = "/sgx/sgx_types" }
sgx_tstd = { path = "/sgx/sgx_tstd" }
protobuf = { path = "../../third_party_sgx/protobuf" }

