[package]
name = "libcontract_trusted"
version = "0.1.0"
authors = ["Raymond Cheng <me@raymondcheng.net>"]
build = "build.rs"

[lib]
name = "libcontract_trusted"
path = "src/lib_trusted.rs"

[features]
stats = []
datasets = []

[dependencies]
sgx_types = { path = "/sgx/sgx_types" }
sgx_tstd = { path = "/sgx/sgx_tstd" }
protobuf = { path = "../third_party_sgx/protobuf" }

[build-dependencies]
protoc-rust = "1.4"
