[package]
name = "ekiden-tools"
version = "0.1.0-alpha.0"
authors = ["Jernej Kos <jernej@kos.mx>"]
include = [
  "src/*.rs",
  "config/*",
]

[dependencies]
mktemp = "0.3.1"
cc = "1.0"
protoc = "1.4"
protoc-rust = "1.4"
protobuf = "1.4"
sgx_edl = { git = "https://github.com/ekiden/rust-sgx-sdk", tag = "v0.9.7-ekiden1" }
