[package]
name = "benchmark-dp-credit-scoring-train"
version = "0.1.0"
authors = ["Nick", "Warren"]

[dependencies]
clap = "2.29.1"
client-utils = { path = "../utils", features = ["benchmark"] }
compute-client = { path = "../../compute-client" }
dp-credit-scoring-api = { path = "../../contracts/dp_credit_scoring/api" }
libcontract-common = { path = "../../libcontract/common" }
protobuf = "1.4.2"
lazy_static = "1.0"
