[package]
name = "benchmark-learner-infer"
version = "0.1.0"
authors = [
    "w <none>"
]

[dependencies]
clap = "2.29.1"
client-utils = { path = "../utils", features = ["benchmark"] }
compute-client = { path = "../../compute-client" }
learner-api = { path = "../../contracts/learner/api" }
libcontract-common = { path = "../../libcontract/common" }
protobuf = "1.4.2"
