[package]
name = "benchmark-token-transfer"
version = "0.1.0"
authors = [
    "w <none>"
]

[dependencies]
client-utils = { path = "../utils", features = ["benchmark"] }
libcontract-common = { path = "../../libcontract/common" }
compute-client = { path = "../../compute-client" }
token-api = { path = "../../contracts/token/api" }
clap = "2.29.1"
lazy_static = "1.0"
rand = "0.4"
futures = "0.1"
tokio-core = "0.1"
