[package]
name = "iot-learner-client"
version = "0.1.0"
authors = ["Nick Hynes <nhynes@berkeley.edu>"]

[dependencies]
clap = "2.29.1"
client-utils = { path = "../utils" }
compute-client = { path = "../../compute-client" }
learner = { path = "../../contracts/learner", default-features = false, features = ["no-sgx"] }
# learner-api = { path = "../../contracts/learner/api", default-features = false, features = ["no-sgx"] }
libcontract-common = { path = "../../libcontract/common" }
protobuf = "1.4.2"
rulinalg = { git = "https://github.com/ekiden/rulinalg.git" }
serde_cbor = "0.8.2"
