[package]
name = "learner-client"
version = "0.1.0"
authors = ["Nick Hynes <nhynes@berkeley.edu>"]

[dependencies]
clap = "2.29.1"
client-utils = { path = "../utils" }
compute-client = { path = "../../compute-client" }
learner-api = { path = "../../contracts/learner/api" }
libcontract-common = { path = "../../libcontract/common" }
protobuf = "1.4.2"
rulinalg = "0.4.2"
serde_cbor = "0.8.1"
