[package]
name = "token-client"
version = "0.1.0"
authors = [
    "Jernej Kos <jernej@kos.mx>"
]

[dependencies]
libcontract-common = { path = "../../libcontract/common" }
compute-client = { path = "../../compute-client" }
token-api = { path = "../../contracts/token/api" }
# TODO: remove this when the client doesn't have to deal with state
protobuf = { version = "1.4.2" }
