[package]
name = "compute-api"
version = "0.1.0-alpha.0"
authors = [
    "Raymond Cheng <me@raymondcheng.net>",
    "Jernej Kos <jernej@kos.mx>"
]
build = "build.rs"

[dependencies]
protobuf = "1.4.2"
grpc = "0.2.1"
tls-api = "0.1.12"

[build-dependencies]
ekiden-tools = { path = "../../tools", version = "0.1.0-alpha.0" }
protoc-rust = "1.4"
protoc-rust-grpc = "0.2.1"
