[package]
name = "dummy"
version = "0.1.0"
authors = ["Jernej Kos <jernej@kos.mx>"]
build = "build.rs"

[lib]
name = "dummy"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_tstd = { path = "/sgx/sgx_tstd" }
libcontract_trusted = { path = "../../libcontract/trusted" }

[build-dependencies]
libcontract_utils = { path = "../../libcontract/utils" }
