[package]
name = "dummy"
version = "0.1.0"
authors = ["Jernej Kos <jernej@kos.mx>"]
build = "build.rs"

[lib]
name = "dummy"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_tstd = { path = "/sgx/sgx_tstd" }
libcontract-trusted = { path = "../../libcontract/trusted" }
protobuf = { path = "../../third_party/protobuf" }

[build-dependencies]
libcontract-utils = { path = "../../libcontract/utils" }
protoc-rust = "1.4"
