[package]
name = "dummy"
version = "0.1.0"
authors = ["Jernej Kos <jernej@kos.mx>"]
build = "build.rs"

[lib]
name = "dummy"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
dummy-api = { path = "./api", features = ["sgx"], default-features = false }
sgx_tstd = { path = "/sgx/sgx_tstd" }
libcontract-common = { path = "../../libcontract/common", features = ["sgx"], default-features = false }
libcontract-trusted = { path = "../../libcontract/trusted" }
protobuf-sgx = { path = "../../third_party/protobuf" }

[build-dependencies]
libcontract-utils = { path = "../../libcontract/utils" }
