[package]
name = "learner"
version = "0.1.0"
authors = ["Nick Hynes <nhynes@berkeley.edu>"]

[lib]
name = "learner"

[features]
default = []

[dependencies]
learner-api = { path = "./api", features = ["sgx"], default-features = false }
libcontract-common = { path = "../../libcontract/common", features = ["sgx"], default-features = false }
libcontract-trusted = { path = "../../libcontract/trusted" }
protobuf-sgx = { git = "https://github.com/ekiden/rust-protobuf" }
rusty-machine-sgx = { git = "https://github.com/ekiden/rust-sgx-sdk" }
serde_cbor-sgx = { git = "https://github.com/ekiden/cbor" }
serde-sgx = { git = "https://github.com/ekiden/serde" }
sgx_tstd = { git = "https://github.com/ekiden/rust-sgx-sdk" }

[build-dependencies]
libcontract-utils = { path = "../../libcontract/utils" }
