[package]
name = "learner"
version = "0.1.0"
authors = ["Nick Hynes <nhynes@berkeley.edu>"]
build = "build.rs"

[lib]
name = "learner"
crate-type = ["staticlib"]

[dependencies]
learner-api = { path = "./api", default-features = false, features = ["sgx"] }
libcontract-common = { path = "../../libcontract/common", default-features = false, features = ["sgx"] }
libcontract-trusted = { path = "../../libcontract/trusted" }
ndarray-sgx = { git = "https://github.com/ekiden/rust-ndarray", features = ["serde-1"] }
ndarray-rand-sgx = { git = "https://github.com/ekiden/rust-ndarray" }
protobuf-sgx = { git = "https://github.com/ekiden/rust-protobuf"}
serde_derive = { git = "https://github.com/ekiden/serde" }
serde-sgx = { git = "https://github.com/ekiden/serde" }
serde_cbor-sgx = { git = "https://github.com/ekiden/cbor" }
sgx_rand = { git = "https://github.com/ekiden/rust-sgx-sdk" }
sgx_tstd = { git = "https://github.com/ekiden/rust-sgx-sdk" }

[build-dependencies]
libcontract-utils = { path = "../../libcontract/utils" }
