[package]
name = "learner"
version = "0.1.0"
authors = ["Nick Hynes <nhynes@berkeley.edu>"]

[lib]
name = "learner"

[features]
default = ["sgx"]
sgx = ["learner-api/sgx", "libcontract-common/sgx", "protobuf-sgx", "rusty-machine-sgx", "serde-sgx", "serde_cbor-sgx", "sgx_tstd"]
no-sgx = ["protobuf", "rusty-machine", "serde", "serde_cbor", "learner-api/no-sgx", "libcontract-common/no-sgx"]

[dependencies]
learner-api = { path = "./api", default-features = false }
libcontract-common = { path = "../../libcontract/common", default-features = false }
protobuf = { version = "1.4.2", optional = true }
protobuf-sgx = { git = "https://github.com/ekiden/rust-protobuf", optional = true}
rusty-machine = { git = "https://github.com/ekiden/rusty-machine", optional = true }
rusty-machine-sgx = { git = "https://github.com/ekiden/rust-sgx-sdk", optional = true }
serde = { version = "1.0.27", optional = true }
serde-sgx = { git = "https://github.com/ekiden/serde", optional = true }
serde_cbor = { version = "0.8.2", optional = true }
serde_cbor-sgx = { git = "https://github.com/ekiden/cbor", optional = true }
sgx_tstd = { git = "https://github.com/ekiden/rust-sgx-sdk", optional = true }

[build-dependencies]
ekiden-tools = { path = "../../tools" }
