[package]
name = "token"
version = "0.1.0"
authors = ["Raymond Cheng <me@raymondcheng.net>"]
build = "build.rs"

[lib]
name = "token"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
token-api = { path = "./api", features = ["sgx"], default-features = false }
sgx_tstd = { git = "https://github.com/ekiden/rust-sgx-sdk" }
libcontract-common = { path = "../../libcontract/common", features = ["sgx"], default-features = false }
libcontract-trusted = { path = "../../libcontract/trusted" }
protobuf-sgx = { git = "https://github.com/ekiden/rust-protobuf" }

[build-dependencies]
libcontract-utils = { path = "../../libcontract/utils" }
