[package]
name = "token_untrusted"
version = "0.1.0"
authors = ["Raymond Cheng <me@raymondcheng.net>"]
build = "build.rs"

[dependencies]
sgx_types = { path = "/sgx/sgx_types" }
sgx_urts = { path = "/sgx/sgx_urts" }
libcontract_untrusted = { path = "../../libcontract_untrusted" }
protobuf = "1.4.2"
