[package]
name = "ekiden-core"
version = "0.1.0-alpha.0"
authors = [
    "Jernej Kos <jernej@kos.mx>"
]

[dependencies]
ekiden-common = { path = "../../common", version = "0.1.0-alpha.0" }
ekiden-enclave-common = { path = "../../enclave/common", version = "0.1.0-alpha.0" }
ekiden-rpc-common = { path = "../../rpc/common", version = "0.1.0-alpha.0" }
