[package]
name = "ekiden-edl"
version = "0.1.0"
authors = [
    "Jernej Kos <jernej@kos.mx>"
]

[dependencies]
ekiden-tools = { path = "../../tools" }
ekiden-rpc-edl = { path = "../../rpc/edl" }
ekiden-db-edl = { path = "../../db/edl" }
sgx_edl = { git = "https://github.com/ekiden/rust-sgx-sdk", tag = "v0.9.7-ekiden1" }
